Renamed to use test leaderboard

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div>
         <p>
             <label for="results">Results Command</label><br>
-            <textarea id="results" style="width: 300px">/game record game: MGSR 1v1 result:</textarea>
+            <textarea id="results" style="width: 300px">/game record game: MGSR 1v1 test result:</textarea>
         </p>
     </div>
     <button onclick="reset()">Reset</button>
