--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MGSR Team-Up Results Utility</title>
 </head>
 
 <body>
@@ -45,7 +45,7 @@
             <textarea id="results" style="width: 300px">/game record game: MGSR 1v1 test result:</textarea>
         </p>
     </div>
-    <button onclick="reset()">Reset</button>
+    <button onclick="reset()">Reset</button><button onclick="copyClipboard()">Copy to Clipboard</button>
     
     
     <script src="app.js"></script>
