Small CSS tweaks.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         }
         
         h2 {
-            color: grey;
+            color: black;
             font-weight: 800;
             -webkit-text-stroke-width: 1px;
             -webkit-text-stroke-color: black;
