Removed 'test' so it's ready for prime time.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="fairway">
         
             <label for="results">Results Command</label><br>
-            <textarea id="results" style="width: 300px">/game record game: MGSR 1v1 test result:</textarea>
+            <textarea id="results" style="width: 300px">/game record game: MGSR 1v1 result:</textarea>
             <br>
         <button onclick="reset()">Reset</button>&nbsp;<button onclick="copyClipboard()">Copy to Clipboard</button>
     </div>
