Changed game to leaderboard. Added list for 2nd set.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="fairway">
         
             <label for="results">Results Command</label><br>
-            <textarea id="results">/game record game: MGSR 1v1 result:</textarea>
+            <textarea id="results">/game record leaderboard: MGSR 1v1 result:</textarea>
             <br>
         <button onclick="reset()">Reset</button>&nbsp;<button onclick="copyClipboard()">Copy to Clipboard</button>
     </div>
