Fixed form button issue

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <h1>MARIO GOLF <span style="display: block;">SUPER RUSH</span></h1>
         <h2>Team Up Bot <span style="display: block;">Game Results Tool</span></h2>
     </div>
-    <form id="mainform" class="fairway">
+    <form id="mainform" class="fairway" onsubmit="return false;">
         <div id="1" onchange="updateState()">
         <label for="placement">Place:</label>
             <input class="place" type="number" min="1" max="4" value="" id="placement1" list="placements">
