--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 <body>
     <main class="main">
     <div class="mario">
-        <h1>MARIO GOLF <span style="display: block;">SUPER RUSH</span></h1>
-        <h2>Team Up Bot <span style="display: block;">Game Results Tool</span></h2>
+        <h1>MARIO GOLF SUPER RUSH</h1>
+        <h2>Team Up Bot Game Results Tool</h2>
     </div>
     <div class="fairway">
        
