Use "#1" and "#2" for All Result Commands
* Currently even for 3P and 4P matches, are results are input with "#1" for winner and "#2" for loser, or both "#1" if tied.  Keep this same behavior when auto-producing commands for all pairings.
* Also, make it so that reclicking "FFA Output" will clear any existing output

--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
         <button id="ffa" onclick="ffaOutput(gameState)">Output FFA</button>
     </p>
     <div id="ResultsArea" class="fairway">
-        
-        <button onclick="reset()">Reset</button>&nbsp;<button onclick="copyClipboard()">Copy to Clipboard</button>
+        <button onclick="copyClipboard()">Copy to Clipboard</button>
     </div>
 
     </main>
