Show Explanation of Each Result Bot Command
Output the (up to) 6 commands in their own box with a brief description of each result
* Include who beat or tied who, and what place they were input as
* To do this, also store the users name, along with ID, in the local state object
* Include the bot command as a non-editable text box (use monospace font to clarify it is a command)

--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
             display: block;
             width: 32rem
         }
+        .command {
+            background-color: #FFFFFF;
+            border: 1px solid gray;
+            font-family: monospace;
+            font-size: 0.75em;
+            margin-bottom: 10px;
+        }
 
     </style>
 </head>
@@ -146,12 +153,12 @@
     <p>
         <button id="ffa" onclick="ffaOutput(gameState)">Output FFA</button>
     </p>
-    <div id="ResultsArea" class="fairway">
-        <button onclick="copyClipboard()">Copy to Clipboard</button>
+
+    <div id="MultiResultsArea" class="fairway">
+      Please select placements and participants above
     </div>
 
     </main>
-
     
     <script src="app.js"></script>
 </body>
