--- a/mgsr/index.html
+++ b/mgsr/index.html
@@ -112,7 +112,7 @@
     <form id="mainform" class="fairway" onsubmit="return false;">
         <div id="1" onchange="updateState()">
         <label for="placement">Place:</label>
-            <input class="place" type="number" min="1" max="4" value="" id="placement1" list="placements">
+            <input class="place" type="number" min="1" max="4" value="1" id="placement1" list="placements">
                 <select  name="playerlist" list="players" id="firstplace">
                     <option value="none" selected disabled hidden>Select a player</option>
                 </select>
@@ -150,12 +150,9 @@
         </datalist>
 
     </form>
-    <p>
-        <button id="ffa" onclick="ffaOutput(gameState)">Output FFA</button>
-    </p>
 
     <div id="MultiResultsArea" class="fairway">
-      Please select placements and participants above
+      Please select at least two placements and participants above
     </div>
 
     </main>
