--- a/mgsr/index.html
+++ b/mgsr/index.html
@@ -84,6 +84,14 @@
             text-shadow: 1px 1px 1px black;
         }
 
+        .command {
+            background-color: #FFFFFF;
+            border: 1px solid gray;
+            font-family: monospace;
+            font-size: 0.75em;
+            line-height: 0.95em;
+            margin-bottom: 10px;
+        }
         .place {
             width: 2.4em;
         }
@@ -91,13 +99,6 @@
         .result {
             display: block;
             width: 32rem
-        }
-        .command {
-            background-color: #FFFFFF;
-            border: 1px solid gray;
-            font-family: monospace;
-            font-size: 0.75em;
-            margin-bottom: 10px;
         }
 
     </style>
