Add Copy Button for Each of the up-to-6 Commands
* Switch from `div` back to `input` to make the select-and-copy text mechanism work on mobile phones

--- a/mgsr/index.html
+++ b/mgsr/index.html
@@ -87,18 +87,15 @@
         .command {
             background-color: #FFFFFF;
             border: 1px solid gray;
+            display: block;
             font-family: monospace;
             font-size: 0.75em;
             line-height: 0.95em;
             margin-bottom: 10px;
+            width: 32rem;
         }
         .place {
             width: 2.4em;
-        }
-
-        .result {
-            display: block;
-            width: 32rem
         }
 
     </style>
