--- a/mgsr/index.html
+++ b/mgsr/index.html
@@ -178,7 +178,10 @@
 
     </main>
     
-    <script src="app.js"></script>
+    <script>
+        const LEADERBOARD_NAME = 'MGSR';
+    </script>
+    <script src="../js/app.js"></script>
 </body>
 
 </html>
