Added Discord link to MGSR

--- a/mgsr/index.html
+++ b/mgsr/index.html
@@ -14,6 +14,7 @@
     <div class="mario">
         <h1>MARIO GOLF SUPER RUSH</h1>
         <h2>Team Up Bot Game Results Tool</h2>
+        <h3><a href="https://discord.gg/A5dxswhshm">MGSR Discord</a></h3>
     </div>
     <form id="mainform" class="fairway" onsubmit="return false;">
         <div id="1" onchange="updateState()">
