Updated Utility commands to remove extraneous 1v1 references

--- a/mgsr/index.html
+++ b/mgsr/index.html
@@ -83,12 +83,12 @@
             <div id="Utility Commands" class="fairway">
                 <div class="utilities">
                     <p class="utillabel">Undo last game.</p>
-                    <input id="undo-record" value="/undo-record leaderboard:mgsr versus:1v1">
+                    <input id="undo-record" value="/undo-record leaderboard:mgsr versus:1">
                 <br>
                 </div>
                 <div class="utilities">
                     <p class="utillabel">Add user to leaderboard (TeamUp Admin-only).</p>
-                    <textarea id="override-elo" rows="2">/game override-elo team:(@ tag new user) leaderboard:mgsr versus:1v1 rating:1200</textarea>
+                    <textarea id="override-elo" rows="2">/game override-elo team:(@ tag new user) leaderboard:mgsr versus:1 rating:1200</textarea>
                 </div>
             </div>
         </details>
@@ -96,7 +96,7 @@
 
     </main>
     <footer>
-        <a class="footerlink" href="https://github.com/mr309/MGSR-TeamUp">GitHub Repo</a>
+        <a class="footerlink" href="https://github.com/mr309/MGSR-TeamUp">GitHub Repo</a> <a class="footerlink" href="https://teamupdiscord.com/">TeamUp</a>
     </footer>
 
     <script>
