Big update to test name-matching. Hidden input boxes for testing.

--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MGSR Team-Up Results Utility</title>
+    <title>MGSR Team-Up Results Utility (Testing)</title>
     <link rel="stylesheet" href="../style.css">
     <script src="//unpkg.com/string-similarity/umd/string-similarity.min.js"></script>
 </head>
@@ -14,7 +14,7 @@
     <main class="main">
     <div class="mario">
         <h1>MARIO GOLF SUPER RUSH</h1>
-        <h2>Team Up Bot Game Results Tool</h2>
+        <h2>Team Up Bot Game Results Tool (Testing)</h2>
         <h3><a href="https://discord.gg/A5dxswhshm">MGSR Discord</a></h3>
     </div>
 
@@ -22,9 +22,9 @@
       Loading selectable users...
     </div>
 
-    <div id="inputParser" class="fairway" style="display: none">
-        <input id="InputCheck" type="text" placeholder="Enter game report from Discord." onkeyup="checkInput(this)" style="width: 100%" />
-        <input id="CheckOutput" type="text" placeholder="Output" style="width: 100%"/>
+    <div id="inputParser" class="fairway">
+        <input id="InputCheck" type="text" placeholder="Enter game report from Discord." onkeyup="checkInput(this)" style="width: 90%" />
+        <input id="CheckOutput" type="text" placeholder="Output" style="width: 90%"/>
       </div>
 
     <div id="usersLoaded" style="display:none;">
