Copy and paste input should now work robustly. Still hidden in main

--- a/mgsr/index.html
+++ b/mgsr/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div id="inputParser" class="fairway" style="display: none">
-        <input id="InputCheck" type="text" placeholder="Enter game report from Discord." onkeyup="checkInput(this)" style="width: 100%" />
+        <input id="InputCheck" type="text" placeholder="Enter game report from Discord." onkeyup="processChange(this)" style="width: 100%" />
         <input id="CheckOutput" type="text" placeholder="Output" style="width: 100%"/>
       </div>
 
