--- a/test/index.html
+++ b/test/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div id="inputParser" class="fairway">
-        <input id="InputCheck" type="text" placeholder="Enter game report from Discord." onkeyup="checkInput(this)" style="width: 90%" />
+        <input id="InputCheck" type="text" placeholder="Enter game report from Discord." onkeyup="processChange(this)" style="width: 90%" />
         <input id="CheckOutput" type="text" placeholder="Output" style="width: 90%"/>
       </div>
 
