Big commit, added full text parsing functionality to test site.

--- a/test/index.html
+++ b/test/index.html
@@ -23,8 +23,9 @@
     </div>
 
     <div id="inputParser" class="fairway">
-        <input id="InputCheck" type="text" placeholder="Enter game report from Discord." onkeyup="processChange(this)" style="width: 90%" />
-        <input id="CheckOutput" type="text" placeholder="Output" style="width: 90%"/>
+        <p class="label">EXPERIMENTAL: Enter a formatted game report from Discord.</p>
+        <input id="InputCheck" type="text" placeholder="#1 ... #2 ... #3 ... #4 ..." onkeyup="processChange(this)" style="width: 90%" />
+        <!-- input id="CheckOutput" type="text" placeholder="Output" style="width: 90%"/-->
       </div>
 
     <div id="usersLoaded" style="display:none;">
