Add Dictionary for Special Nickname/Username Pairs

--- a/test/index.html
+++ b/test/index.html
@@ -22,9 +22,8 @@
     </div>
 
     <div id="inputParser" class="fairway" style="display:none;">
-        <p class="label">EXPERIMENTAL: Enter a formatted game report from Discord.</p>
+        <p class="label">Paste Score Report Here from Discord</p>
         <input id="InputCheck" type="text" placeholder="#1 ... #2 ... #3 ... #4 ..." onkeyup="processChange(this)"  onpaste="processChange(this)" style="width: 90%" />
-        <!-- input id="CheckOutput" type="text" placeholder="Output" style="width: 90%"/-->
       </div>
 
     <div id="usersLoaded" style="display:none;">
