--- a/mgsr/index.html
+++ b/mgsr/index.html
@@ -22,9 +22,9 @@
       Loading selectable users...
     </div>
 
-    <div id="inputParser" class="fairway" style="display: none">
-        <input id="InputCheck" type="text" placeholder="Enter game report from Discord." onkeyup="processChange(this)" style="width: 100%" />
-        <input id="CheckOutput" type="text" placeholder="Output" style="width: 100%"/>
+    <div id="inputParser" class="fairway" style="display:none;">
+        <p class="label">Paste Score Report Here from Discord</p>
+        <input id="InputCheck" type="text" placeholder="#1 ... #2 ... #3 ... #4 ..." onkeyup="processChange(this)"  onpaste="processChange(this)" style="width: 95%" />
       </div>
 
     <div id="usersLoaded" style="display:none;">
@@ -108,6 +108,7 @@
     <script>
         const LEADERBOARD_NAME = 'MGSR';
     </script>
+    <script src="https://unpkg.com/string-similarity/umd/string-similarity.min.js"></script>
     <script src="../js/app.js"></script>
 </body>
 
