--- a/mgsr/index.html
+++ b/mgsr/index.html
@@ -84,6 +84,7 @@
         <div id="MultiResultsArea" class="fairway">
           Please select at least two placements and participants above
         </div>
+        <button onclick="clearInputs()" class="clearbutton">Clear</button>
         <details>
             <summary>Utility Commands</summary>
             <div id="Utility Commands" class="fairway">
