Update to Season 2

--- a/mgsr/index.html
+++ b/mgsr/index.html
@@ -14,7 +14,7 @@
     <main class="main">
     <div class="mario">
         <h1>MARIO GOLF SUPER RUSH</h1>
-        <h2>Team Up Bot Game Results Tool</h2>
+        <h2>Ladder Results Tool: Season 2</h2>
         <h3><a href="https://discord.gg/A5dxswhshm">MGSR Discord</a></h3>
     </div>
 
@@ -90,12 +90,12 @@
             <div id="Utility Commands" class="fairway">
                 <div class="utilities">
                     <p class="utillabel">Undo last game.</p>
-                    <input id="undo-record" value="/undo-record leaderboard:mgsr versus:1">
+                    <input id="undo-record" value="/undo-record leaderboard:mgsr2 versus:1">
                 <br>
                 </div>
                 <div class="utilities">
                     <p class="utillabel">Add user to leaderboard (TeamUp Admin-only).</p>
-                    <textarea id="override-elo" rows="2">/game override-elo team:(@ tag new user) leaderboard:mgsr versus:1 rating:1200</textarea>
+                    <textarea id="override-elo" rows="2">/game override-elo team:(@ tag new user) leaderboard:mgsr2 versus:1 rating:1200</textarea>
                 </div>
             </div>
         </details>
