Fixed leaderboard name issue

--- a/mgsr/index.html
+++ b/mgsr/index.html
@@ -107,7 +107,7 @@
     </footer>
 
     <script>
-        const LEADERBOARD_NAME = 'MGSR';
+        const LEADERBOARD_NAME = 'mgsr2';
     </script>
     <script src="https://unpkg.com/string-similarity/umd/string-similarity.min.js"></script>
     <script src="../js/app.js"></script>
